--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -6,7 +6,7 @@
   .content-wrapper {
     position: absolute;
     width: 600px;
-    height: 937px;
+    height: 850px;
     left: 88px;
     top: 72px;
 
@@ -17,8 +17,7 @@
     position: absolute;
     left: 42.17%;
     right: 42.17%;
-    top: 2.99%;
-    bottom: 93.49%;
+    top: 3.99%;
   }
 
   .password-reset-image {
@@ -26,27 +25,20 @@
     width: 209px;
     height: 215px;
     left: 195px;
-    top: 107px;
+    top: 120px;
   }
 
   .password-reset-title {
     position: absolute;
     left: 19%;
     right: 19%;
-    top: 39.27%;
-    bottom: 48.45%;
-
-    font-family: 'Poppins';
+    top: 41.27%;
+    font-family: 'Arial';
     font-style: normal;
     font-weight: 400;
     font-size: 29px;
     line-height: 39px;
-    /* or 134% */
-
     text-align: center;
-
-    /* Gray 1 */
-
     color: #333333;
   }
 
@@ -54,10 +46,10 @@
     position: absolute;
     left: 15.83%;
     right: 16%;
-    top: 42.48%;
+    top: 44.75%;
     bottom: 46.64%;
 
-    font-family: 'Poppins';
+    font-family: 'Arial';
     font-style: normal;
     font-size: 14px;
     line-height: 20px;
@@ -71,17 +63,12 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 8px 30px;
-
     position: absolute;
     height: 50px;
     left: 35.17%;
     right: 35.17%;
-    top: calc(50% - 50px/2 + 61.5px);
-
-    /* #7C3B94 */
-
-    background: #58107C;
+    top: 57%;
+    background: linear-gradient(99.74deg, #57107C 13.42%, #57107C 30%, #1D51A2 123.17%);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
   }
@@ -90,12 +77,12 @@
     position: static;
     width: 128px;
     height: 15px;
-    left: calc(50% - 128px/2);
-    top: calc(50% - 15px/2);
+    left: calc(50% - 128px / 2);
+    top: calc(50% - 15px / 2);
 
-    font-family: 'Nunito';
+    font-family: 'Arial';
     font-style: normal;
-    font-weight: 700;
+    font-weight: 400;
     font-size: 14px;
     line-height: 106.65%;
     /* identical to box height, or 15px */
@@ -119,10 +106,10 @@
     position: absolute;
     left: 15.83%;
     right: 16%;
-    top: 64.14%;
+    top: 67.14%;
     bottom: 24.97%;
 
-    font-family: 'Poppins';
+    font-family: 'Arial';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -139,7 +126,7 @@
   .footer-wrapper {
     position: absolute;
     width: 600px;
-    height: 199px;
+    height: 120px;
     left: 0px;
     bottom: 0px;
   }
@@ -160,8 +147,8 @@
     position: absolute;
     left: 43.33%;
     right: 42.67%;
-    top: 20.1%;
-    bottom: 49.75%;
+    top: 23.1%;
+    bottom: 26.75%;
 
     background: url(<%= asset_path('v2-email-footer-logo.png') %>);
   }
@@ -185,7 +172,8 @@
     <span class="reset-button-text">Reset my password</span>
   </a>
   <p class="password-reset-bottom-text">
-    If you did not request this password reset request, please ignore this request and contact <a style="text-decoration: underline;" href="mailto:support@theversion2.com">support@theversion2.com</a>
+    If you did not request this password reset request, please ignore this request and contact
+    <a style="text-decoration: underline;" href="mailto:support@theversion2.com">support@theversion2.com</a>
   </p>
   <div class="footer-wrapper">
     <div class="footer-background">
