--- a/app/views/users/mailer/invitation_instructions.html.erb
+++ b/app/views/users/mailer/invitation_instructions.html.erb
@@ -2,7 +2,7 @@
   .content-wrapper {
     position: absolute;
     width: 600px;
-    height: 1400px;
+    height: 1300px;
     left: 88px;
     top: 59px;
 
@@ -51,20 +51,14 @@
     position: absolute;
     left: 17.5%;
     right: 17.67%;
-    top: 12.71%;
+    top: 14.71%;
     bottom: 83.86%;
-
-    font-family: 'Poppins';
+    font-family: 'Arial';
     font-style: normal;
     font-weight: 700;
     font-size: 47px;
     line-height: 39px;
-    /* or 83% */
-
     text-align: center;
-
-    /* WHite */
-
     color: #FFFFFF;
   }
 
@@ -72,19 +66,12 @@
     position: absolute;
     left: 19%;
     right: 19%;
-    top: 35.64%;
-    bottom: 56.14%;
-
-    font-family: 'Poppins';
+    top: 36.64%;
+    font-family: 'Arial';
     font-weight: 400;
     font-size: 29px;
     line-height: 39px;
-    /* or 134% */
-
     text-align: center;
-
-    /* Gray 1 */
-
     color: #333333;
   }
 
@@ -92,19 +79,12 @@
     position: absolute;
     left: 19%;
     right: 19%;
-    top: 42.43%;
-    bottom: 54.57%;
-
-    font-family: 'Poppins';
+    top: 43.43%;
+    font-family: 'Arial';
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
-    /* or 125% */
-
     text-align: center;
-
-    /* #7C3B94 */
-
     color: #58107C;
   }
 
@@ -112,20 +92,12 @@
     position: absolute;
     left: 15.67%;
     right: 17.33%;
-    top: 49.07%;
-    bottom: 26%;
-
-    font-family: 'Poppins';
+    top: 50.07%;
+    font-family: 'Arial';
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
     line-height: 20px;
-    /* or 143% */
-
-
-    /* #7C3B94 */
-
-    
   }
 
   .purple {
@@ -137,17 +109,15 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 8px 30px;
-
     position: absolute;
     height: 50px;
     left: 35.17%;
     right: 35.17%;
-    top: calc(50% - 50px/2 + 412px);
+    top: calc(50% - 50px / 2 + 412px);
 
     /* #7C3B94 */
 
-    background: #58107C;
+    background: linear-gradient(99.74deg, #57107C 13.42%, #57107C 30%, #1D51A2 123.17%);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
   }
@@ -156,12 +126,12 @@
     position: static;
     width: 75px;
     height: 15px;
-    left: calc(50% - 75px/2);
-    top: calc(50% - 15px/2);
+    left: calc(50% - 75px / 2);
+    top: calc(50% - 15px / 2);
 
-    font-family: 'Nunito';
+    font-family: 'Arial';
     font-style: normal;
-    font-weight: 700;
+    font-weight: 400;
     font-size: 14px;
     line-height: 106.65%;
     /* identical to box height, or 15px */
@@ -188,7 +158,7 @@
   .footer-wrapper {
     position: absolute;
     width: 600px;
-    height: 199px;
+    height: 120px;
     left: 0px;
     bottom: 0px;
   }
@@ -209,49 +179,50 @@
     position: absolute;
     left: 43.33%;
     right: 42.67%;
-    top: 20.1%;
-    bottom: 49.75%;
+    top: 23.1%;
+    bottom: 26.75%;
 
     background: url(<%= asset_path('v2-email-footer-logo.png') %>);
   }
 
 </style>
-  <div class="content-wrapper">
-    <div class="header-content"></div>
-    <div class="header-background"></div>
-    <div class="header-image"></div>
-    <div class="header-image-bottom"></div>
-    <div class="invited-text">You're invited</div>
-    <div class="title">You’ve been invited by John Smith to join Orion.</div>
-    <div class="subtitle">A TOOL TO EXPLORE, MAP, CREATE, AND ACTIVATE AUDIENCES IN YOUR DSP OF CHOICE.</div>
-    <div class="email-body">
-      <p>
-        <strong class="purple">Explore</strong><br>
-        Discover audience segments that can be combined or individually targeted to grow your site traffic and brand awareness.
-      </p>
-      <p>
-        <strong class="purple">Map</strong><br>
-        Port ORION audience segments over to your ORION DSPs for heightened scope and increased reach.<br>
-      </p>
+<div class="content-wrapper">
+  <div class="header-content"></div>
+  <div class="header-background"></div>
+  <div class="header-image"></div>
+  <div class="header-image-bottom"></div>
+  <div class="invited-text">You're invited!</div>
+  <div class="title">You’ve been invited by John Smith to join Orion.</div>
+  <div class="subtitle">A TOOL TO EXPLORE, MAP, CREATE, AND ACTIVATE AUDIENCES IN YOUR DSP OF CHOICE.</div>
+  <div class="email-body">
+    <p>
+      <strong class="purple">Explore</strong><br>
+      Discover audience segments that can be combined or individually targeted to grow your site traffic and brand
+      awareness.
+    </p>
+    <p>
+      <strong class="purple">Map</strong><br>
+      Port ORION audience segments over to your ORION DSPs for heightened scope and increased reach.<br>
+    </p>
 
-      <p>
-        <strong class="purple">Create</strong><br>
-        Build custom audiences off of your 1st party data, 3rd party data, and ORION data, through the largest free repository of consumer data.<br>
-      </p>
+    <p>
+      <strong class="purple">Create</strong><br>
+      Build custom audiences off of your 1st party data, 3rd party data, and ORION data, through the largest free
+      repository of consumer data.<br>
+    </p>
 
-      <p>
-        <strong class="purple">Activate</strong><br>
-        Use ORION audience segments as a force multiplier for your brand or agency clients.<br>
-      </p>
-    </div>
-
-    <a class="get-started-button" href="<%= accept_invitation_url(@resource, invitation_token: @token) %>"><span class="button-text">Get Started</span></a>
-
-    <div class="footer-wrapper">
-      <div class="footer-background">
-      </div>
-
-      <div class="footer-logo">
-      </div>
-    </div>  
+    <p>
+      <strong class="purple">Activate</strong><br>
+      Use ORION audience segments as a force multiplier for your brand or agency clients.<br>
+    </p>
   </div>
+
+  <a class="get-started-button" href="<%= accept_invitation_url(@resource, invitation_token: @token) %>"><span class="button-text">Get Started</span></a>
+
+  <div class="footer-wrapper">
+    <div class="footer-background">
+    </div>
+    <div class="footer-logo">
+    </div>
+  </div>
+</div>
