--- a/app/views/users/invitations/edit.slim
+++ b/app/views/users/invitations/edit.slim
@@ -4,9 +4,9 @@
     .col-4
       .card
         .card-body
-          = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
+          = simple_form_for(resource, as: resource_name, url: invitation_path(resource_name), html: { method: :put }) do |f|
             = render "devise/shared/error_messages", resource: resource
-            = f.hidden_field :reset_password_token
+            = f.hidden_field :invitation_token
             .col.d-flex.flex-column.align-items-center
               = image_tag "logo-orion.svg", style: 'width: 153px', class: 'mb-4'
             .col.d-flex.flex-column.align-items-center
