pointing to prod server for mailer

--- a/app/views/users/mailer/invitation_instructions.html.erb
+++ b/app/views/users/mailer/invitation_instructions.html.erb
@@ -192,7 +192,7 @@
   <div class="header-image"></div>
   <div class="header-image-bottom"></div>
   <div class="invited-text">You're invited!</div>
-  <div class="title">You’ve been invited by John Smith to join Orion.</div>
+  <div class="title">You’ve been invited to join Orion.</div>
   <div class="subtitle">A TOOL TO EXPLORE, MAP, CREATE, AND ACTIVATE AUDIENCES IN YOUR DSP OF CHOICE.</div>
   <div class="email-body">
     <p>
