--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,185 +1,32 @@
-<style>
-  A {
-    text-decoration: none
-  }
-
-  .content-wrapper {
-    position: absolute;
-    width: 600px;
-    height: 850px;
-    left: 88px;
-    top: 72px;
-
-    background: #FFFFFF;
-  }
-
-  .logo {
-    position: absolute;
-    left: 42.17%;
-    right: 42.17%;
-    top: 3.99%;
-  }
-
-  .password-reset-image {
-    position: absolute;
-    width: 209px;
-    height: 215px;
-    left: 195px;
-    top: 120px;
-  }
-
-  .password-reset-title {
-    position: absolute;
-    left: 19%;
-    right: 19%;
-    top: 41.27%;
-    font-family: 'Arial';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 29px;
-    line-height: 39px;
-    text-align: center;
-    color: #333333;
-  }
-
-  .password-reset-subtitle {
-    position: absolute;
-    left: 15.83%;
-    right: 16%;
-    top: 44.75%;
-    bottom: 46.64%;
-
-    font-family: 'Arial';
-    font-style: normal;
-    font-size: 14px;
-    line-height: 20px;
-    /* or 143% */
-
-    text-align: center;
-  }
-
-  .reset-button {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    height: 50px;
-    left: 35.17%;
-    right: 35.17%;
-    top: 57%;
-    background: linear-gradient(99.74deg, #57107C 13.42%, #57107C 30%, #1D51A2 123.17%);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 8px;
-  }
-
-  .reset-button-text {
-    position: static;
-    width: 128px;
-    height: 15px;
-    left: calc(50% - 128px / 2);
-    top: calc(50% - 15px / 2);
-
-    font-family: 'Arial';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 106.65%;
-    /* identical to box height, or 15px */
-
-    display: flex;
-    align-items: center;
-    text-align: center;
-
-    color: #FFFFFF;
-
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    margin: 0px 10px;
-  }
-
-  .password-reset-bottom-text {
-    position: absolute;
-    left: 15.83%;
-    right: 16%;
-    top: 67.14%;
-    bottom: 24.97%;
-
-    font-family: 'Arial';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    /* or 143% */
-
-    text-align: center;
-
-    /* Gray 1 */
-
-    color: #333333;
-  }
-
-  .footer-wrapper {
-    position: absolute;
-    width: 600px;
-    height: 120px;
-    left: 0px;
-    bottom: 0px;
-  }
-
-  .footer-background {
-    position: absolute;
-    left: 0%;
-    right: 0%;
-    top: 0%;
-    bottom: 0%;
-
-    /* Gradient Button */
-
-    background: linear-gradient(99.74deg, #57107C 13.42%, #57107C 30%, #1D51A2 123.17%);
-  }
-
-  .footer-logo {
-    position: absolute;
-    left: 43.33%;
-    right: 42.67%;
-    top: 23.1%;
-    bottom: 26.75%;
-
-    background: url(<%= asset_path('v2-email-footer-logo.png') %>);
-  }
-</style>
-
-<div class="content-wrapper">
-  <div class="logo">
+<div style="font-size:14px; font-family:'Arial'; text-align:center; width: 600px; height: 700px; background:#ffffff; margin: auto;">
+  <div style="margin: auto; width: fit-content; padding: 0 0 40px 0;">
     <img src="<%= asset_path('password-reset-logo.png') %>">
   </div>
-  <div class="password-reset-image">
+  <div style="width:209px; height:215px; margin: auto;">
     <img src="<%= asset_path('password-reset-image.png') %>">
   </div>
-  <div class="password-reset-title">
+  <div style="font-size:29px; line-height:39px; color:#333333; padding-top: 20px;">
     Password reset request
   </div>
-  <p class="password-reset-subtitle">
+  <p style="line-height:20px;">
     A request to change your password has been made.<br>
     To reset your password, click the button below.
   </p>
-  <a class="reset-button" href="<%= edit_password_url(@resource, reset_password_token: @token) %>">
-    <span class="reset-button-text">Reset my password</span>
+  <a href="<%= edit_password_url(@resource, reset_password_token: @token) %>"
+     style="display:flex;height:40px;background:linear-gradient(99.74deg,#57107c 13.42%,#57107c 30%,#1d51a2 123.17%);
+       border-radius:8px;text-decoration:none;color:white;width:fit-content;margin:40px auto;">
+    <span style="display:flex;margin:auto 10px;">
+      Reset my password</span>
   </a>
-  <p class="password-reset-bottom-text">
+  <p style="color:#333333;width: 400px;margin: auto;">
     If you did not request this password reset request, please ignore this request and contact
-    <a style="text-decoration: underline;" href="mailto:support@theversion2.com">support@theversion2.com</a>
+    <a href="mailto:support@theversion2.com">support@theversion2.com</a>
   </p>
-  <div class="footer-wrapper">
-    <div class="footer-background">
-    </div>
-
-    <div class="footer-logo">
+  <div style="width: 100%;height: 120px;margin-top: 30px;align-content: center;">
+    <div style="background:linear-gradient(99.74deg,#57107c 13.42%,#57107c 30%,#1d51a2 123.17%);
+      height: -webkit-fill-available; opacity:0.999">
+      <span style="height:100%;display:inline-block;vertical-align: middle;"></span>
+      <img style="margin:auto;width:85px;height:60px;vertical-align: middle;" src="<%= asset_path('v2-email-footer-logo.png') %>"/>
     </div>
   </div>
 </div>
