--- a/app/views/campaign_mailer/customer_confirmation.html.erb
+++ b/app/views/campaign_mailer/customer_confirmation.html.erb
@@ -3,6 +3,7 @@
     <div class="header-background" style="height: 379px; width: 600px; background-image: url(<%= asset_path('invitation-mail-header-background.png') %>)">
       <div style="height: 53px"></div>
       <img style="display: block; top: 53px; margin-left: auto; margin-right: auto" src="<%= asset_path('invitation-mail-orion-title.png') %>"/>
+      <div style="height: 100px"></div>
       <div class="header-image-bottom" style="height: 204px; background-image: url(<%= asset_path('invitation-mail-header-image-bottom.png') %>)"></div>
       </div>
       <div class="email-body" style="height: 200px; margin-top: 200px; margin-left: 100px; margin-right: 100px; font-family: Arial; font-weight: 400; font-size: 14px; line-height: 20px">
