Added upload creative cbx to action items

--- a/app/assets/stylesheets/base/version2.sass
+++ b/app/assets/stylesheets/base/version2.sass
@@ -626,5 +626,10 @@
 #crm_data
   height: 12px
 
+#is_creative_uploaded
+  height: 12px
+.checkbox-text
+  position: absolute
+  top: 0
 .crm-data-label
   margin-top: 0.5rem
