allows upload of csv and excel documents

--- a/app/assets/stylesheets/base/version2.sass
+++ b/app/assets/stylesheets/base/version2.sass
@@ -475,7 +475,8 @@
             background: #dc3545
           .blue
             background: #1683ff
-            background: #1683ff
+          .green
+            background: #177f5e
         .details
           background: white
           height: 25px
