Dsp image size (#144)
* Fixed image size for DSP

* fixed creative studios logo

--- a/app/views/pages/creative_studios.slim
+++ b/app/views/pages/creative_studios.slim
@@ -23,7 +23,7 @@
         .card
           .card-body.text-center.d-flex.align-items-center
             .text-center
-              = image_tag "airtory.png", class: 'platform-image'
+              = image_tag "airtory.png", class: 'platform-image airtory-logo'
               .access-btn
                 = link_to "Access Airtory", "https://studio.airtory.com/", class: 'btn btn-primary', target: '_blank'
 
