--- a/app/views/pages/platforms.slim
+++ b/app/views/pages/platforms.slim
@@ -33,7 +33,7 @@
         .card
           .card-body.text-center.d-flex.align-items-center
             .text-center
-              = image_tag "zeta_logo.png", class: 'platform-image'
+              = image_tag "zeta_logo.png", class: 'platform-image zeta-logo'
               .access-btn
                 = link_to "Access Zeta", "https://dsp.zetaglobal.net/", class: 'btn btn-primary', target: '_blank'
 
