--- a/app/assets/stylesheets/demand_side_platforms.sass
+++ b/app/assets/stylesheets/demand_side_platforms.sass
@@ -9,6 +9,11 @@
     .platform-image
       margin: 0 auto
       display: block
-      height: 70px
+      width: 100%
+      object-fit: contain
+    .zeta-logo
+      width: 28%
+    .airtory-logo
+      width: 60%
     .access-btn
       margin-top: 30px
