added higher image resolutions for emails

--- a/app/views/campaign_mailer/customer_confirmation.html.erb
+++ b/app/views/campaign_mailer/customer_confirmation.html.erb
@@ -1,10 +1,10 @@
 <div class="content-wrapper" style="width: 600px; height: 1300px; left: 88px; top: 59px; background: #FFFFFF">
   <div class="header-content" style="height: 437px; background: linear-gradient(127.38deg, #1D51A2 52.95%, #57107C 86.08%, #57107C 92.52%);">
-    <div class="header-background" style="height: 379px; width: 600px; background-image: url(<%= asset_path('invitation-mail-header-background.png') %>)">
+    <div class="header-background" style="height: 379px; width: 600px;  background-size: contain; background-image: url(<%= asset_path('invitation-mail-header-background.png') %>)">
       <div style="height: 53px"></div>
-      <img style="display: block; top: 53px; margin-left: auto; margin-right: auto" src="<%= asset_path('invitation-mail-orion-title.png') %>"/>
+      <img style="display: block; width: 156px; height: 80px; top: 53px; margin-left: auto; margin-right: auto" src="<%= asset_path('invitation-mail-orion-title.png') %>"/>
       <div style="height: 100px"></div>
-      <div class="header-image-bottom" style="height: 204px; background-image: url(<%= asset_path('invitation-mail-header-image-bottom.png') %>)"></div>
+      <div class="header-image-bottom" style="height: 204px; width: 600px; background-size: contain; background-image: url(<%= asset_path('invitation-mail-header-image-bottom.png') %>)"></div>
       </div>
       <div class="email-body" style="height: 200px; margin-top: 200px; margin-left: 100px; margin-right: 100px; font-family: Arial; font-weight: 400; font-size: 14px; line-height: 20px">
         <p>
@@ -28,7 +28,7 @@
       <div class="footer-wrapper" style="margin-top: 50px; height: 120px">
         <div class="footer-background" style="height: 120px; background: linear-gradient(99.74deg, #57107C 13.42%, #57107C 30%, #1D51A2 123.17%)">
           <div style="height: 30px"></div>
-          <img style="display: block; margin-left: auto; margin-right: auto" src="<%= asset_path('v2-email-footer-logo.png') %>">
+          <img style="display: block; width: 84px; height: 60px; margin-left: auto; margin-right: auto" src="<%= asset_path('v2-email-footer-logo.png') %>">
         </div>
       </div>
     </div>
