--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,9 +1,9 @@
 <div style="font-size:14px; font-family:'Arial'; text-align:center; width: 600px; height: 700px; background:#ffffff; margin: auto;">
   <div style="margin: auto; width: fit-content; padding: 0 0 40px 0;">
-    <img src="<%= asset_path('password-reset-logo.png') %>">
+    <img style="width: 94px; height: 33px;" src="<%= asset_path('password-reset-logo.png') %>">
   </div>
   <div style="width:209px; height:215px; margin: auto;">
-    <img src="<%= asset_path('password-reset-image.png') %>">
+    <img style="width: 209px; height: 215px;" src="<%= asset_path('password-reset-image.png') %>">
   </div>
   <div style="font-size:29px; line-height:39px; color:#333333; padding-top: 20px;">
     Password reset request
@@ -26,7 +26,7 @@
     <div style="background:linear-gradient(99.74deg,#57107c 13.42%,#57107c 30%,#1d51a2 123.17%);
       height: -webkit-fill-available; opacity:0.999">
       <span style="height:100%;display:inline-block;vertical-align: middle;"></span>
-      <img style="margin:auto;width:85px;height:60px;vertical-align: middle;" src="<%= asset_path('v2-email-footer-logo.png') %>"/>
+      <img style="margin:auto; width:84px; height:60px; vertical-align: middle;" src="<%= asset_path('v2-email-footer-logo.png') %>"/>
     </div>
   </div>
 </div>
