Finished first set of tooltips

--- a/app/assets/stylesheets/base/version2.sass
+++ b/app/assets/stylesheets/base/version2.sass
@@ -91,6 +91,7 @@
     .label-v2.default-position
       color: $purple-2
       position: relative
+      margin-bottom: -10px
 
     .input-v2
       padding-top: 20px
