Removing footfall from action items

--- a/app/assets/stylesheets/demand_side_platforms.sass
+++ b/app/assets/stylesheets/demand_side_platforms.sass
@@ -11,6 +11,7 @@
       display: block
       width: 100%
       object-fit: contain
+      max-height: 65px
     .zeta-logo
       width: 28%
     .airtory-logo
